ElectorateFinder input must have a font-size of at least 16px on iOS to stop zooming on focus.

--- a/src/components/ElectorateFinder/styles.scss
+++ b/src/components/ElectorateFinder/styles.scss
@@ -1,3 +1,5 @@
+@import '../../constants.scss';
+
 .root {
   position: relative;
   margin: 0.5rem 0;
@@ -43,7 +45,7 @@
 .input {
   margin: 0.25rem;
   border: 0;
-  padding: 0.375rem 1.75rem 0.25rem;
+  padding: 0.375rem 1.25rem 0.25rem 1.75rem;
   width: calc(100% - 0.5rem);
   font-family: ABCSans, Helvetica, Arial, sans-serif;
   font-size: 0.8125rem;
@@ -52,6 +54,29 @@
 
   &::-ms-clear {
     display: none;
+  }
+
+  @media #{$mq-sm} {
+    &:focus {
+      padding: 0.125rem 1.25rem 0 1.75rem;
+      font-size: 1rem;
+
+      &::-webkit-input-placeholder {
+        color: transparent;
+      }
+
+      &:-moz-placeholder {
+        color: transparent;
+      }
+
+      &::-moz-placeholder {
+        color: transparent;
+      }
+
+      &:-ms-input-placeholder {
+        color: transparent;
+      }
+    }
   }
 }
 
